--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "start-django": "cd djangoapp && python3 manage.py runserver",
+    "start-both": "concurrently \"npm run start\" \"npm run start-django\"",
+    "kill-ports": "kill -9 $(lsof -t -i:8000,8888) || true"
   },
   "keywords": [],
   "author": "",
@@ -27,5 +30,8 @@
     "pug": "^3.0.2",
     "socket.io": "^4.7.4",
     "winston": "^3.11.0"
+  },
+  "devDependencies": {
+    "concurrently": "^8.2.2"
   }
 }
