--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.20.2",
     "busboy": "^1.6.0",
     "connect-mongo": "^5.1.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-session": "^1.18.0",
     "gridfs-stream": "^1.1.1",
